@@ -1,8 +1,6 @@
 package no.nav.k9.kodeverk.arbeidsforhold;
 
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Set;
@@ -86,14 +84,14 @@ public enum AktivitetStatus implements Kodeverdi {
         return Collections.unmodifiableMap(KODER);
     }
 
-    private static final Set<AktivitetStatus> AT_STATUSER = new HashSet<>(Arrays.asList(ARBEIDSTAKER,
-        KOMBINERT_AT_FL_SN, KOMBINERT_AT_SN, KOMBINERT_AT_FL));
+    private static final Set<AktivitetStatus> AT_STATUSER = Set.of(
+        ARBEIDSTAKER, KOMBINERT_AT_FL_SN, KOMBINERT_AT_SN, KOMBINERT_AT_FL);
 
-    private static final Set<AktivitetStatus> SN_STATUSER = new HashSet<>(Arrays.asList(SELVSTENDIG_NÆRINGSDRIVENDE,
-        KOMBINERT_AT_FL_SN, KOMBINERT_AT_SN, KOMBINERT_FL_SN));
+    private static final Set<AktivitetStatus> SN_STATUSER = Set.of(
+        SELVSTENDIG_NÆRINGSDRIVENDE, KOMBINERT_AT_FL_SN, KOMBINERT_AT_SN, KOMBINERT_FL_SN);
 
-    private static final Set<AktivitetStatus> FL_STATUSER = new HashSet<>(Arrays.asList(FRILANSER,
-        KOMBINERT_AT_FL_SN, KOMBINERT_AT_FL, KOMBINERT_FL_SN));
+    private static final Set<AktivitetStatus> FL_STATUSER = Set.of(
+        FRILANSER, KOMBINERT_AT_FL_SN, KOMBINERT_AT_FL, KOMBINERT_FL_SN);
 
     public boolean erArbeidstaker() {
         return AT_STATUSER.contains(this);
@@ -118,7 +116,7 @@ public enum AktivitetStatus implements Kodeverdi {
         return KODEVERK;
     }
 
-    @JsonProperty(value="kode")
+    @JsonProperty(value = "kode")
     @Override
     public String getKode() {
         return kode;
